--- a/iTWOcx/.classpath
+++ b/iTWOcx/.classpath
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="D:/SeleniumDriver/selenium-2.41.0/selenium-java-2.41.0.jar"/>
+	<classpathentry kind="lib" path="D:/SeleniumDriver/selenium-2.41.0/selenium-java-2.41.0-srcs.jar"/>
+	<classpathentry kind="lib" path="D:/SeleniumDriver/selenium-2.41.0/libs/junit-dep-4.11.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="D:/Tools/Selenium/selenium-java-2.41.0/selenium-2.41.0/selenium-java-2.41.0.jar"/>
-	<classpathentry kind="lib" path="D:/Tools/Selenium/selenium-java-2.41.0/selenium-2.41.0/selenium-java-2.41.0-srcs.jar"/>
-	<classpathentry kind="lib" path="D:/Tools/Selenium/selenium-server-standalone-2.41.0.jar"/>
+	<classpathentry kind="lib" path="D:/SeleniumDriver/selenium-server-standalone-2.41.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
